01-beginner/04-load-balancing/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: load-balancing
  labels:
    app: load-balancing-demo
    project: kubernetes-learning
