01-beginner/04-load-balancing/manifests/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: load-balancing
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: load-balancing
  labels:
    app: web-app
    service-type: nodeport
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer
  namespace: load-balancing
  labels:
    app: web-app
    service-type: loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
